blue_green_eks/kubernetes/deployment_green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: green-app
  template:
    metadata:
      labels:
        app: green-app
    spec:
      containers:
      - name: green-app
        image: # Set
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1001
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: green-app
  namespace: default
spec:
  ports:
    - port: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app: green-app
